# simples3

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  devenv.nix  flake.nix  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1771691100288-f8e20c9e25332.mjs  webpack.config.cjs
.github/workflows/: release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE5_COMPLETE.md  PHASE6_SUMMARY.md
scripts/: find-free-port.cjs
specs/001-s3-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.minimal.tsx  App.simple.tsx  App.test.tsx  App.tsx  App.ultra-minimal.tsx  main.js  test-react.js  test.js
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  endpoints.rs  filesystem.rs  mod.rs  s3.rs  transfers.rs
src-tauri/src/models/: config.rs  endpoint.rs  file_item.rs  mod.rs  transfer.rs
src-tauri/src/services/: config.rs  endpoint.rs  filesystem.rs  keystore.rs  mod.rs  s3_client.rs  transfer.rs
src-tauri/src/utils/: error.rs  mod.rs
src/components/: ConfirmDialog.tsx  ConflictDialog.tsx  ContextMenu.tsx  EndpointManager.tsx  ErrorBoundary.tsx  FileItem.tsx  InputDialog.tsx  LocalPane.tsx  S3Pane.tsx  SettingsPanel.tsx  TransferQueue.tsx
src/contexts/: ClipboardContext.tsx
(+6 files in other folders)
